# RknnInferTemplate

./: .gitignore  CMakeLists.txt  README.md
rknn_infer/: main.cpp  plugin_ctrl.cpp  plugin_ctrl.h  rknn_infer.cpp  rknn_infer.h  rknn_model.cpp  rknn_model.h  utils_log.h
rknn_infer_api/: rknn_infer_api.h
rknn_plugins/: image_op_utils.h  mpp_video_decoder.cpp  mpp_video_decoder.h  mpp_video_encoder.cpp  mpp_video_encoder.h  mpp_video_utils.h  plugin_common.h  rknn_image.cpp  rknn_mobilenet.cpp
rknn_plugins/rknn_mobilenet/: rknn_mobilenet.cpp
rknn_plugins/rknn_plugin_template/: rknn_plugin_template.cpp
rknn_plugins/rknn_yolo_v5/: rknn_yolo_v5.cpp  rknn_yolo_v5_video.cpp
unit_test/: test_mpp_video_decoder.cpp  test_rknn_model.cpp
utils/: utils.h  utils_config.h  utils_log.h
